--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -11,8 +11,10 @@
 @import items/index
 @import items/show
 @import outfits/edit
+@import outfits/index
 @import outfits/new
 @import outfits/show
 @import pets/bulk
 @import static/terms
 @import users/top_contributors
+
