clearer <title>s for search engines

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,10 @@
       - if content_for? :title
         = yield :title
         |
-      Dress to Impress
+      - if content_for? :title_category
+        = yield :title_category
+      - else
+        Dress to Impress: Preview customized Neopets' clothing and wearables
     /[if IE]
       = include_javascript_libraries :html5
     = stylesheet_link_tag "compiled/screen"
