--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -1,3 +1,5 @@
+- content_for :title_category do
+  Infinite Closet: Neopets customization clothing and wearables database
 - content_for :before_flashes do
   %h1
     = link_to items_path do
