--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -35,6 +35,7 @@
       #preview-swf-container
         %p Flash and Javascript (but not Java!) are required to preview outfits.
         %p If this message stays after the page is done loading, check those first.
+      #preview-image-container
     #preview-sidebar
       #outfit-not-found Outfit not found
       #save-success Outfit successfully saved
