donate page noninteractive

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -241,3 +241,10 @@ dd
   font-style: normal
   font-weight: normal
   src: local("Droid Sans"), url("http://themes.googleusercontent.com/font?kit=POVDFY-UUf0WFR9DIMCU8g") format("truetype")
+
+@font-face
+  font-family: 'Calligraffitti'
+  font-style: normal
+  font-weight: normal
+  src: local('Calligraffiti'), url('http://themes.googleusercontent.com/font?kit=vLVN2Y-z65rVu1R7lWdvyKIZAuDcNtpCWuPSaIR0Ie8') format('woff')
+
