--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -15,6 +15,7 @@
 @import outfits/new
 @import outfits/show
 @import pets/bulk
+@import static/donate
 @import static/terms
 @import users/top_contributors
 
