--- a/app/stylesheets/static/_donate.sass
+++ b/app/stylesheets/static/_donate.sass
@@ -1,3 +1,6 @@
+@import "compass/css3/gradient"
+@import "compass/css3/text-shadow"
+
 body.static-donate
   #title
     margin-bottom: 0
@@ -9,6 +12,9 @@ body.static-donate
   #title, h2
     float: left
 
+  h2
+    margin-bottom: .25em
+
   .pledgie-link
     +awesome-button
     +loud-awesome-button-color
@@ -19,18 +25,53 @@ body.static-donate
     margin-top: .5em
     padding: .75em
 
+  #campaign-progress-wrapper
+    +border-radius(8px)
+    background: #aaa
+    +linear-gradient(color-stops(#ccc, #aaa))
+
+    border: 4px solid $module-border-color
+    clear: both
+    margin-bottom: 1.5em
+    position: relative
+    visibility: hidden
+
+  #campaign-progress
+    background: $module-border-color
+    +linear-gradient(color-stops($module-border-color + #222, $module-border-color))
+    border-right: 1px solid $module-border-color
+
+  #campaign-progress-wrapper, #campaign-progress
+    height: 2.5em
+
+  #campaign-progress-label
+    +text-shadow(#777, -1px, -1px, 0)
+    color: white
+    font-size: 150%
+    left: 0
+    position: absolute
+    top: 0
+    text-align: center
+    width: 100%
+
   $image-mode-preview-image-width: 300px
   $image-mode-preview-image-border-width: 1px
   $image-mode-preview-h-padding: 20px
   $image-mode-preview-border-width: 1px
   $image-mode-preview-right-margin: 20px
-  $image-mode-preview-outer-width: $image-mode-preview-image-width + $image-mode-preview-right-margin + 2 * ($image-mode-preview-image-border-width + $image-mode-preview-h-padding + $image-mode-preview-border-width)
-  #image-mode-preview
-    border: $image-mode-preview-border-width solid $module-border-color
+  $image-mode-preview-width: $image-mode-preview-image-width + 2 * ($image-mode-preview-image-border-width + $image-mode-preview-h-padding + $image-mode-preview-border-width)
+  $image-mode-preview-outer-width: $image-mode-preview-width + $image-mode-preview-right-margin
+
+  #image-mode-data
     clear: both
     display: block
     float: left
-    margin: 0 $image-mode-preview-right-margin 0 0
+    margin-right: $image-mode-preview-right-margin
+    width: $image-mode-preview-width
+
+  #image-mode-preview
+    border: $image-mode-preview-border-width solid $module-border-color
+    margin: 0 0 2em 0
     padding:
       top: $image-mode-preview-h-padding
       right: $image-mode-preview-h-padding
@@ -46,6 +87,19 @@ body.static-donate
       font-family: Calligraffitti
       font-size: 250%
       text-align: center
+
+  #campaign-donors
+    display: none
+    margin-right: $image-mode-preview-right-margin
+    width: $image-mode-preview-width
+
+    ol
+      font-size: 85%
+      padding-left: 2em
+
+      span
+        color: $soft-text-color
+        float: right
 
   $image-mode-description-width: $container-width - $image-mode-preview-outer-width
 
@@ -75,7 +129,14 @@ body.static-donate
     .pledgie-link
       margin: .75em 0
 
-  #image-mode-description
+  #image-mode-description, #image-mode-comments
     float: left
     width: $image-mode-description-width
+
+  &.campaign-loaded
+    #campaign-progress-wrapper
+      visibility: visible
+
+    #campaign-donors
+      display: block
 
