--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -2463,20 +2463,24 @@ body.pets-bulk .script-only {
   display: none;
 }
 
-/* line 2, ../../../app/stylesheets/static/_donate.sass */
+/* line 5, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #title {
   margin-bottom: 0;
 }
-/* line 5, ../../../app/stylesheets/static/_donate.sass */
+/* line 8, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate h2 {
   font-style: italic;
   font-weight: normal;
 }
-/* line 9, ../../../app/stylesheets/static/_donate.sass */
+/* line 12, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #title, body.static-donate h2 {
   float: left;
 }
-/* line 12, ../../../app/stylesheets/static/_donate.sass */
+/* line 15, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate h2 {
+  margin-bottom: 0.25em;
+}
+/* line 18, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate .pledgie-link {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
@@ -2512,7 +2516,7 @@ body.static-donate .pledgie-link:active {
 body.static-donate .pledgie-link:hover {
   background-color: #ee4b00;
 }
-/* line 16, ../../../app/stylesheets/static/_donate.sass */
+/* line 22, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #pledgie-link-with-title {
   float: right;
   font-size: 150%;
@@ -2520,30 +2524,88 @@ body.static-donate #pledgie-link-with-title {
   padding: 0.75em;
 }
 /* line 28, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #image-mode-preview {
-  border: 1px solid #006600;
+body.static-donate #campaign-progress-wrapper {
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  background: #aaaaaa;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
+  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  border: 4px solid #006600;
+  clear: both;
+  margin-bottom: 1.5em;
+  position: relative;
+  visibility: hidden;
+}
+/* line 39, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-progress {
+  background: #006600;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #228822), color-stop(100%, #006600));
+  background-image: -moz-linear-gradient(top, #228822 0%, #006600 100%);
+  background-image: linear-gradient(top, #228822 0%, #006600 100%);
+  border-right: 1px solid #006600;
+}
+/* line 44, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-progress-wrapper, body.static-donate #campaign-progress {
+  height: 2.5em;
+}
+/* line 47, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-progress-label {
+  text-shadow: #777777 -1px -1px 0;
+  color: white;
+  font-size: 150%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  width: 100%;
+}
+/* line 65, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #image-mode-data {
   clear: both;
   display: block;
   float: left;
-  margin: 0 20px 0 0;
+  margin-right: 20px;
+  width: 344px;
+}
+/* line 72, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #image-mode-preview {
+  border: 1px solid #006600;
+  margin: 0 0 2em 0;
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 13.333px;
   padding-left: 20px;
 }
-/* line 40, ../../../app/stylesheets/static/_donate.sass */
+/* line 81, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-preview img {
   border: 1px solid #006600;
   margin-bottom: 0.5em;
 }
-/* line 44, ../../../app/stylesheets/static/_donate.sass */
+/* line 85, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-preview figcaption {
   display: block;
   font-family: Calligraffitti;
   font-size: 250%;
   text-align: center;
 }
-/* line 56, ../../../app/stylesheets/static/_donate.sass */
+/* line 91, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-donors {
+  display: none;
+  margin-right: 20px;
+  width: 344px;
+}
+/* line 96, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-donors ol {
+  font-size: 85%;
+  padding-left: 2em;
+}
+/* line 100, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-donors ol span {
+  color: #448844;
+  float: right;
+}
+/* line 110, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta {
   background: #eeffee;
   border: 1px solid #006600;
@@ -2556,25 +2618,33 @@ body.static-donate #image-mode-beta {
   text-align: center;
   width: 404px;
 }
-/* line 66, ../../../app/stylesheets/static/_donate.sass */
+/* line 120, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta header {
   display: block;
   font-weight: bold;
 }
-/* line 70, ../../../app/stylesheets/static/_donate.sass */
+/* line 124, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta p {
   font-family: "Droid Sans", Helvetica, Arial, Verdana, sans-serif;
   font-size: 75%;
   margin: 0;
 }
-/* line 75, ../../../app/stylesheets/static/_donate.sass */
+/* line 129, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta .pledgie-link {
   margin: 0.75em 0;
 }
-/* line 78, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #image-mode-description {
+/* line 132, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #image-mode-description, body.static-donate #image-mode-comments {
   float: left;
   width: 436px;
+}
+/* line 137, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate.campaign-loaded #campaign-progress-wrapper {
+  visibility: visible;
+}
+/* line 140, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate.campaign-loaded #campaign-donors {
+  display: block;
 }
 
 /* line 1, ../../../app/stylesheets/static/_terms.sass */
