--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -2,15 +2,15 @@
 = pledgie_link :id => 'pledgie-link-with-title'
 %h2 Image Mode is almost here, but we need your help!
 
-#campaign-progress-wrapper
-  #campaign-progress{:style => 'width: 27%'}
-  #campaign-progress-label
+.campaign-progress-wrapper
+  .campaign-progress
+  .campaign-progress-label
     We have
     = surround '$', ',' do
-      %span.campaign-raised 100
+      %span.campaign-raised
     and need
     = precede '$' do
-      %span.campaign-goal 360
+      %span.campaign-goal
     to run the upgraded server for a year
 
 %section#image-mode-data
