--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -2524,7 +2524,7 @@ body.static-donate #pledgie-link-with-title {
   padding: 0.75em;
 }
 /* line 28, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #campaign-progress-wrapper {
+body.static-donate .campaign-progress-wrapper {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   background: #aaaaaa;
@@ -2538,7 +2538,7 @@ body.static-donate #campaign-progress-wrapper {
   visibility: hidden;
 }
 /* line 39, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #campaign-progress {
+body.static-donate .campaign-progress {
   background: #006600;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #228822), color-stop(100%, #006600));
   background-image: -moz-linear-gradient(top, #228822 0%, #006600 100%);
@@ -2546,11 +2546,11 @@ body.static-donate #campaign-progress {
   border-right: 1px solid #006600;
 }
 /* line 44, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #campaign-progress-wrapper, body.static-donate #campaign-progress {
+body.static-donate .campaign-progress-wrapper, body.static-donate .campaign-progress {
   height: 2.5em;
 }
 /* line 47, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate #campaign-progress-label {
+body.static-donate .campaign-progress-label {
   text-shadow: #777777 -1px -1px 0;
   color: white;
   font-size: 150%;
@@ -2639,7 +2639,7 @@ body.static-donate #image-mode-description, body.static-donate #image-mode-comme
   width: 436px;
 }
 /* line 137, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate.campaign-loaded #campaign-progress-wrapper {
+body.static-donate.campaign-loaded .campaign-progress-wrapper {
   visibility: visible;
 }
 /* line 140, ../../../app/stylesheets/static/_donate.sass */
