--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -1,4 +1,8 @@
+@import "partials/campaign-progress"
+
 body.outfits-new
+  +campaign-progress
+
   #outfit-forms
     +clearfix
     +module
@@ -132,3 +136,4 @@ body.outfits-new
         +opacity(1)
   #read-more
     float: right
+
