--- a/app/stylesheets/static/_donate.sass
+++ b/app/stylesheets/static/_donate.sass
@@ -1,7 +1,11 @@
 @import "compass/css3/gradient"
 @import "compass/css3/text-shadow"
 
+@import "partials/campaign-progress"
+
 body.static-donate
+  +campaign-progress
+
   #title
     margin-bottom: 0
 
@@ -24,35 +28,6 @@ body.static-donate
     font-size: 150%
     margin-top: .5em
     padding: .75em
-
-  .campaign-progress-wrapper
-    +border-radius(8px)
-    background: #aaa
-    +linear-gradient(color-stops(#ccc, #aaa))
-
-    border: 4px solid $module-border-color
-    clear: both
-    margin-bottom: 1.5em
-    position: relative
-    visibility: hidden
-
-  .campaign-progress
-    background: $module-border-color
-    +linear-gradient(color-stops($module-border-color + #222, $module-border-color))
-    border-right: 1px solid $module-border-color
-
-  .campaign-progress-wrapper, .campaign-progress
-    height: 2.5em
-
-  .campaign-progress-label
-    +text-shadow(#777, -1px, -1px, 0)
-    color: white
-    font-size: 150%
-    left: 0
-    position: absolute
-    top: 0
-    text-align: center
-    width: 100%
 
   $image-mode-preview-image-width: 300px
   $image-mode-preview-image-border-width: 1px
@@ -134,9 +109,6 @@ body.static-donate
     width: $image-mode-description-width
 
   &.campaign-loaded
-    .campaign-progress-wrapper
-      visibility: visible
-
     #campaign-donors
       display: block
 
