--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -2115,7 +2115,51 @@ body.outfits-index #outfits .outfit-edit-link {
   margin-left: 1em;
 }
 
-/* line 2, ../../../app/stylesheets/outfits/_new.sass */
+/* line 2, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new .campaign-progress-wrapper {
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  background: #aaaaaa;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
+  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  border: 4px solid #006600;
+  clear: both;
+  margin-bottom: 1.5em;
+  position: relative;
+  visibility: hidden;
+}
+/* line 13, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new .campaign-progress {
+  background: #006600;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #228822), color-stop(100%, #006600));
+  background-image: -moz-linear-gradient(top, #228822 0%, #006600 100%);
+  background-image: linear-gradient(top, #228822 0%, #006600 100%);
+  border-right: 1px solid #006600;
+}
+/* line 18, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new .campaign-progress-wrapper, body.outfits-new .campaign-progress {
+  height: 2.5em;
+}
+/* line 21, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new .campaign-progress-label {
+  text-shadow: #777777 -1px -1px 0;
+  font-size: 150%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  width: 100%;
+}
+/* line 30, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new .campaign-progress-label, body.outfits-new .campaign-progress-label a {
+  color: white;
+}
+/* line 34, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.outfits-new.campaign-loaded .campaign-progress-wrapper {
+  visibility: visible;
+}
+/* line 6, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms {
   overflow: hidden;
   display: inline-block;
@@ -2129,17 +2173,17 @@ body.outfits-new #outfit-forms {
 body.outfits-new #outfit-forms {
   display: block;
 }
-/* line 7, ../../../app/stylesheets/outfits/_new.sass */
+/* line 11, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms h1 {
   margin-bottom: 0;
 }
-/* line 9, ../../../app/stylesheets/outfits/_new.sass */
+/* line 13, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms h2 {
   font-size: 150%;
   font-style: italic;
   text-indent: 1em;
 }
-/* line 14, ../../../app/stylesheets/outfits/_new.sass */
+/* line 18, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview {
   float: left;
   height: 300px;
@@ -2147,27 +2191,27 @@ body.outfits-new #outfit-forms #pet-preview {
   position: relative;
   width: 300px;
 }
-/* line 20, ../../../app/stylesheets/outfits/_new.sass */
+/* line 24, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview img {
   height: 100%;
   width: 100%;
 }
-/* line 23, ../../../app/stylesheets/outfits/_new.sass */
+/* line 27, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview.loading img {
   -moz-opacity: 0.5;
   -webkit-opacity: 0.5;
   -o-opacity: 0.5;
   -khtml-opacity: 0.5;
 }
-/* line 25, ../../../app/stylesheets/outfits/_new.sass */
+/* line 29, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview.hidden img {
   display: none;
 }
-/* line 27, ../../../app/stylesheets/outfits/_new.sass */
+/* line 31, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview.loaded {
   cursor: pointer;
 }
-/* line 29, ../../../app/stylesheets/outfits/_new.sass */
+/* line 33, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview span {
   background: gray;
   background: rgba(0, 0, 0, 0.5);
@@ -2177,32 +2221,32 @@ body.outfits-new #outfit-forms #pet-preview span {
   position: absolute;
   right: 0;
 }
-/* line 37, ../../../app/stylesheets/outfits/_new.sass */
+/* line 41, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms #pet-preview span:empty {
   display: none;
 }
-/* line 39, ../../../app/stylesheets/outfits/_new.sass */
+/* line 43, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms fieldset {
   position: relative;
   left: 1em;
 }
-/* line 42, ../../../app/stylesheets/outfits/_new.sass */
+/* line 46, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #outfit-forms fieldset legend {
   margin-left: -1em;
 }
-/* line 44, ../../../app/stylesheets/outfits/_new.sass */
+/* line 48, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #load-pet-to-wardrobe {
   font-size: 175%;
   margin-bottom: 1em;
   margin-top: 2em;
 }
-/* line 49, ../../../app/stylesheets/outfits/_new.sass */
+/* line 53, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #load-pet-to-wardrobe input {
   font-size: 67%;
   padding: 0.5em;
   width: 10em;
 }
-/* line 53, ../../../app/stylesheets/outfits/_new.sass */
+/* line 57, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #load-pet-to-wardrobe button {
   background: #ff5c00 url('/images/alert-overlay.png?1296599919') repeat-x;
   font-size: 125%;
@@ -2213,34 +2257,34 @@ body.outfits-new #load-pet-to-wardrobe button {
 body.outfits-new #load-pet-to-wardrobe button:hover {
   background-color: #ee4b00;
 }
-/* line 56, ../../../app/stylesheets/outfits/_new.sass */
+/* line 60, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #description, body.outfits-new #top-contributors {
   float: left;
 }
-/* line 58, ../../../app/stylesheets/outfits/_new.sass */
+/* line 62, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #description {
   margin-right: 2%;
   width: 64%;
 }
-/* line 61, ../../../app/stylesheets/outfits/_new.sass */
+/* line 65, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #top-contributors {
   border: 1px solid #cceecc;
   margin-top: 1em;
   padding: 1%;
   width: 30%;
 }
-/* line 66, ../../../app/stylesheets/outfits/_new.sass */
+/* line 70, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #top-contributors ol {
   margin-left: 2em;
   padding-left: 1em;
 }
-/* line 69, ../../../app/stylesheets/outfits/_new.sass */
+/* line 73, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #top-contributors > a {
   font-size: 80%;
   display: block;
   text-align: right;
 }
-/* line 73, ../../../app/stylesheets/outfits/_new.sass */
+/* line 77, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #how-can-i-help, body.outfits-new #i-found-something {
   background: #eeffee;
   border: 1px solid #006600;
@@ -2249,34 +2293,34 @@ body.outfits-new #how-can-i-help, body.outfits-new #i-found-something {
   padding: 1%;
   width: 46%;
 }
-/* line 78, ../../../app/stylesheets/outfits/_new.sass */
+/* line 82, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #how-can-i-help h2, body.outfits-new #i-found-something h2 {
   font-style: italic;
 }
-/* line 80, ../../../app/stylesheets/outfits/_new.sass */
+/* line 84, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #how-can-i-help input, body.outfits-new #how-can-i-help button, body.outfits-new #i-found-something input, body.outfits-new #i-found-something button {
   font-size: 115%;
 }
-/* line 82, ../../../app/stylesheets/outfits/_new.sass */
+/* line 86, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #how-can-i-help input[type=text], body.outfits-new #how-can-i-help body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form body.outfits-new #how-can-i-help textarea, body.outfits-new #i-found-something input[type=text], body.outfits-new #i-found-something body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form body.outfits-new #i-found-something textarea {
   border-color: #006600;
   width: 12em;
 }
-/* line 85, ../../../app/stylesheets/outfits/_new.sass */
+/* line 89, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #how-can-i-help {
   margin-right: 1%;
 }
-/* line 87, ../../../app/stylesheets/outfits/_new.sass */
+/* line 91, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #i-found-something {
   margin-left: 1%;
 }
-/* line 89, ../../../app/stylesheets/outfits/_new.sass */
+/* line 93, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #i-found-something a {
   float: right;
   font-size: 87.5%;
   margin-top: 1em;
 }
-/* line 98, ../../../app/stylesheets/outfits/_new.sass */
+/* line 102, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections {
   overflow: hidden;
   display: inline-block;
@@ -2288,11 +2332,11 @@ body.outfits-new #sections {
 body.outfits-new #sections {
   display: block;
 }
-/* line 103, ../../../app/stylesheets/outfits/_new.sass */
+/* line 107, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections h3 {
   margin-bottom: 0.25em;
 }
-/* line 105, ../../../app/stylesheets/outfits/_new.sass */
+/* line 109, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections li {
   border-left-color: #006600;
   border-left-style: solid;
@@ -2302,30 +2346,30 @@ body.outfits-new #sections li {
   position: relative;
   width: 33.333%;
 }
-/* line 114, ../../../app/stylesheets/outfits/_new.sass */
+/* line 118, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections li:first-child {
   border-left: 0;
 }
-/* line 116, ../../../app/stylesheets/outfits/_new.sass */
+/* line 120, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections div {
   color: #448844;
   font-size: 75%;
   margin-left: 1em;
   z-index: 2;
 }
-/* line 121, ../../../app/stylesheets/outfits/_new.sass */
+/* line 125, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections h4, body.outfits-new #sections input {
   font-size: 116%;
 }
-/* line 123, ../../../app/stylesheets/outfits/_new.sass */
+/* line 127, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections h4, body.outfits-new #sections input[type=text], body.outfits-new #sections body.pets-bulk #bulk-pets-form textarea, body.pets-bulk #bulk-pets-form body.outfits-new #sections textarea {
   color: inherit;
 }
-/* line 125, ../../../app/stylesheets/outfits/_new.sass */
+/* line 129, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections h4 a {
   background: #ffffc0;
 }
-/* line 127, ../../../app/stylesheets/outfits/_new.sass */
+/* line 131, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections img {
   -moz-opacity: 0.75;
   -webkit-opacity: 0.75;
@@ -2334,14 +2378,14 @@ body.outfits-new #sections img {
   float: right;
   margin-left: 0.5em;
 }
-/* line 131, ../../../app/stylesheets/outfits/_new.sass */
+/* line 135, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #sections img:hover {
   -moz-opacity: 1;
   -webkit-opacity: 1;
   -o-opacity: 1;
   -khtml-opacity: 1;
 }
-/* line 133, ../../../app/stylesheets/outfits/_new.sass */
+/* line 137, ../../../app/stylesheets/outfits/_new.sass */
 body.outfits-new #read-more {
   float: right;
 }
@@ -2463,24 +2507,68 @@ body.pets-bulk .script-only {
   display: none;
 }
 
-/* line 5, ../../../app/stylesheets/static/_donate.sass */
+/* line 2, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate .campaign-progress-wrapper {
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  background: #aaaaaa;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
+  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
+  border: 4px solid #006600;
+  clear: both;
+  margin-bottom: 1.5em;
+  position: relative;
+  visibility: hidden;
+}
+/* line 13, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate .campaign-progress {
+  background: #006600;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #228822), color-stop(100%, #006600));
+  background-image: -moz-linear-gradient(top, #228822 0%, #006600 100%);
+  background-image: linear-gradient(top, #228822 0%, #006600 100%);
+  border-right: 1px solid #006600;
+}
+/* line 18, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate .campaign-progress-wrapper, body.static-donate .campaign-progress {
+  height: 2.5em;
+}
+/* line 21, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate .campaign-progress-label {
+  text-shadow: #777777 -1px -1px 0;
+  font-size: 150%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  width: 100%;
+}
+/* line 30, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate .campaign-progress-label, body.static-donate .campaign-progress-label a {
+  color: white;
+}
+/* line 34, ../../../app/stylesheets/partials/_campaign-progress.sass */
+body.static-donate.campaign-loaded .campaign-progress-wrapper {
+  visibility: visible;
+}
+/* line 9, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #title {
   margin-bottom: 0;
 }
-/* line 8, ../../../app/stylesheets/static/_donate.sass */
+/* line 12, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate h2 {
   font-style: italic;
   font-weight: normal;
 }
-/* line 12, ../../../app/stylesheets/static/_donate.sass */
+/* line 16, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #title, body.static-donate h2 {
   float: left;
 }
-/* line 15, ../../../app/stylesheets/static/_donate.sass */
+/* line 19, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate h2 {
   margin-bottom: 0.25em;
 }
-/* line 18, ../../../app/stylesheets/static/_donate.sass */
+/* line 22, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate .pledgie-link {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
@@ -2516,51 +2604,14 @@ body.static-donate .pledgie-link:active {
 body.static-donate .pledgie-link:hover {
   background-color: #ee4b00;
 }
-/* line 22, ../../../app/stylesheets/static/_donate.sass */
+/* line 26, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #pledgie-link-with-title {
   float: right;
   font-size: 150%;
   margin-top: 0.5em;
   padding: 0.75em;
 }
-/* line 28, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate .campaign-progress-wrapper {
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  background: #aaaaaa;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #cccccc), color-stop(100%, #aaaaaa));
-  background-image: -moz-linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
-  background-image: linear-gradient(top, #cccccc 0%, #aaaaaa 100%);
-  border: 4px solid #006600;
-  clear: both;
-  margin-bottom: 1.5em;
-  position: relative;
-  visibility: hidden;
-}
-/* line 39, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate .campaign-progress {
-  background: #006600;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #228822), color-stop(100%, #006600));
-  background-image: -moz-linear-gradient(top, #228822 0%, #006600 100%);
-  background-image: linear-gradient(top, #228822 0%, #006600 100%);
-  border-right: 1px solid #006600;
-}
-/* line 44, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate .campaign-progress-wrapper, body.static-donate .campaign-progress {
-  height: 2.5em;
-}
-/* line 47, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate .campaign-progress-label {
-  text-shadow: #777777 -1px -1px 0;
-  color: white;
-  font-size: 150%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  text-align: center;
-  width: 100%;
-}
-/* line 65, ../../../app/stylesheets/static/_donate.sass */
+/* line 40, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-data {
   clear: both;
   display: block;
@@ -2568,7 +2619,7 @@ body.static-donate #image-mode-data {
   margin-right: 20px;
   width: 344px;
 }
-/* line 72, ../../../app/stylesheets/static/_donate.sass */
+/* line 47, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-preview {
   border: 1px solid #006600;
   margin: 0 0 2em 0;
@@ -2577,35 +2628,35 @@ body.static-donate #image-mode-preview {
   padding-bottom: 13.333px;
   padding-left: 20px;
 }
-/* line 81, ../../../app/stylesheets/static/_donate.sass */
+/* line 56, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-preview img {
   border: 1px solid #006600;
   margin-bottom: 0.5em;
 }
-/* line 85, ../../../app/stylesheets/static/_donate.sass */
+/* line 60, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-preview figcaption {
   display: block;
   font-family: Calligraffitti;
   font-size: 250%;
   text-align: center;
 }
-/* line 91, ../../../app/stylesheets/static/_donate.sass */
+/* line 66, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #campaign-donors {
   display: none;
   margin-right: 20px;
   width: 344px;
 }
-/* line 96, ../../../app/stylesheets/static/_donate.sass */
+/* line 71, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #campaign-donors ol {
   font-size: 85%;
   padding-left: 2em;
 }
-/* line 100, ../../../app/stylesheets/static/_donate.sass */
+/* line 75, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #campaign-donors ol span {
   color: #448844;
   float: right;
 }
-/* line 110, ../../../app/stylesheets/static/_donate.sass */
+/* line 85, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta {
   background: #eeffee;
   border: 1px solid #006600;
@@ -2618,31 +2669,27 @@ body.static-donate #image-mode-beta {
   text-align: center;
   width: 404px;
 }
-/* line 120, ../../../app/stylesheets/static/_donate.sass */
+/* line 95, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta header {
   display: block;
   font-weight: bold;
 }
-/* line 124, ../../../app/stylesheets/static/_donate.sass */
+/* line 99, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta p {
   font-family: "Droid Sans", Helvetica, Arial, Verdana, sans-serif;
   font-size: 75%;
   margin: 0;
 }
-/* line 129, ../../../app/stylesheets/static/_donate.sass */
+/* line 104, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta .pledgie-link {
   margin: 0.75em 0;
 }
-/* line 132, ../../../app/stylesheets/static/_donate.sass */
+/* line 107, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-description, body.static-donate #image-mode-comments {
   float: left;
   width: 436px;
 }
-/* line 137, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate.campaign-loaded .campaign-progress-wrapper {
-  visibility: visible;
-}
-/* line 140, ../../../app/stylesheets/static/_donate.sass */
+/* line 112, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate.campaign-loaded #campaign-donors {
   display: block;
 }
