--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -2656,7 +2656,11 @@ body.static-donate #campaign-donors ol span {
   color: #448844;
   float: right;
 }
-/* line 85, ../../../app/stylesheets/static/_donate.sass */
+/* line 79, ../../../app/stylesheets/static/_donate.sass */
+body.static-donate #campaign-donors.has-donors {
+  display: block;
+}
+/* line 88, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta {
   background: #eeffee;
   border: 1px solid #006600;
@@ -2669,29 +2673,25 @@ body.static-donate #image-mode-beta {
   text-align: center;
   width: 404px;
 }
-/* line 95, ../../../app/stylesheets/static/_donate.sass */
+/* line 98, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta header {
   display: block;
   font-weight: bold;
 }
-/* line 99, ../../../app/stylesheets/static/_donate.sass */
+/* line 102, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta p {
   font-family: "Droid Sans", Helvetica, Arial, Verdana, sans-serif;
   font-size: 75%;
   margin: 0;
 }
-/* line 104, ../../../app/stylesheets/static/_donate.sass */
+/* line 107, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-beta .pledgie-link {
   margin: 0.75em 0;
 }
-/* line 107, ../../../app/stylesheets/static/_donate.sass */
+/* line 110, ../../../app/stylesheets/static/_donate.sass */
 body.static-donate #image-mode-description, body.static-donate #image-mode-comments {
   float: left;
   width: 436px;
-}
-/* line 112, ../../../app/stylesheets/static/_donate.sass */
-body.static-donate.campaign-loaded #campaign-donors {
-  display: block;
 }
 
 /* line 1, ../../../app/stylesheets/static/_terms.sass */
