/donate firefox compatibility

--- a/app/stylesheets/static/_donate.sass
+++ b/app/stylesheets/static/_donate.sass
@@ -36,6 +36,7 @@ body.static-donate
 
   #image-mode-preview
     border: $image-mode-preview-border-width solid $module-border-color
+    display: block
     margin: 0 0 2em 0
     padding:
       top: $image-mode-preview-h-padding
