add thank you to userbar for donors

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -1,7 +1,7 @@
 @import ../shared/jquery.jgrowl
 @import partials/wardrobe
 
-@import icon
+@import "partials/icon"
 @import star
 
 $object-padding: 6px
