--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -1,3 +1,5 @@
+@import "partials/icon"
+
 /* Reset
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
@@ -134,6 +136,13 @@ ul.buttons
   > *
     display: inline
     margin: 0 .25em
+
+#userbar-image-mode
+  font-weight: bold
+  margin-right: 1em
+  text-decoration: none
+  img
+    +icon
 
 #userbar-log-in
   text-decoration: none
