--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Reset */
-/* line 3, ../../../app/stylesheets/_layout.sass */
+/* line 5, ../../../app/stylesheets/_layout.sass */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
 font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b,
@@ -16,12 +16,12 @@ caption, tbody, tfoot, thead, tr, th, td {
 }
 
 /* Typography */
-/* line 18, ../../../app/stylesheets/_layout.sass */
+/* line 20, ../../../app/stylesheets/_layout.sass */
 html, body {
   height: 100%;
 }
 
-/* line 21, ../../../app/stylesheets/_layout.sass */
+/* line 23, ../../../app/stylesheets/_layout.sass */
 body {
   background: white;
   color: #004400;
@@ -30,60 +30,60 @@ body {
   line-height: 1.5;
 }
 
-/* line 29, ../../../app/stylesheets/_layout.sass */
+/* line 31, ../../../app/stylesheets/_layout.sass */
 a {
   color: #226622;
 }
 
-/* line 32, ../../../app/stylesheets/_layout.sass */
+/* line 34, ../../../app/stylesheets/_layout.sass */
 p {
   font-family: "Droid Serif", Georgia, "Times New Roman", Times, serif;
 }
 
-/* line 35, ../../../app/stylesheets/_layout.sass */
+/* line 37, ../../../app/stylesheets/_layout.sass */
 input, button, select {
   font-family: inherit;
   font-size: 100%;
 }
 
-/* line 40, ../../../app/stylesheets/_layout.sass */
+/* line 42, ../../../app/stylesheets/_layout.sass */
 p {
   margin-bottom: 1em;
 }
 
-/* line 43, ../../../app/stylesheets/_layout.sass */
+/* line 45, ../../../app/stylesheets/_layout.sass */
 h1, h2, h3 {
   font-family: Delicious, Helvetica, Arial, Verdana, sans-serif;
 }
 
-/* line 46, ../../../app/stylesheets/_layout.sass */
+/* line 48, ../../../app/stylesheets/_layout.sass */
 h1 {
   font-size: 3em;
   line-height: 1;
   margin-bottom: 0.5em;
 }
 
-/* line 51, ../../../app/stylesheets/_layout.sass */
+/* line 53, ../../../app/stylesheets/_layout.sass */
 h2 {
   font-size: 2em;
   margin-bottom: 0.75em;
 }
 
-/* line 55, ../../../app/stylesheets/_layout.sass */
+/* line 57, ../../../app/stylesheets/_layout.sass */
 h3 {
   font-size: 1.5em;
   line-height: 1;
   margin-bottom: 1em;
 }
 
-/* line 60, ../../../app/stylesheets/_layout.sass */
+/* line 62, ../../../app/stylesheets/_layout.sass */
 .inline-image, body.pets-bulk #bulk-pets-form ul img {
   margin-right: 1em;
   vertical-align: middle;
 }
 
 /* Main */
-/* line 68, ../../../app/stylesheets/_layout.sass */
+/* line 70, ../../../app/stylesheets/_layout.sass */
 #container {
   margin: 1em auto;
   padding-top: 3em;
@@ -91,12 +91,12 @@ h3 {
   width: 800px;
 }
 
-/* line 74, ../../../app/stylesheets/_layout.sass */
+/* line 76, ../../../app/stylesheets/_layout.sass */
 input, button, select, label {
   cursor: pointer;
 }
 
-/* line 77, ../../../app/stylesheets/_layout.sass */
+/* line 79, ../../../app/stylesheets/_layout.sass */
 input[type=text], body.pets-bulk #bulk-pets-form textarea, input[type=password], input[type=search], select {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -105,12 +105,12 @@ input[type=text], body.pets-bulk #bulk-pets-form textarea, input[type=password],
   color: #448844;
   padding: 0.25em;
 }
-/* line 83, ../../../app/stylesheets/_layout.sass */
+/* line 85, ../../../app/stylesheets/_layout.sass */
 input[type=text]:focus, body.pets-bulk #bulk-pets-form textarea:focus, input[type=text]:active, body.pets-bulk #bulk-pets-form textarea:active, input[type=password]:focus, input[type=password]:active, input[type=search]:focus, input[type=search]:active, select:focus, select:active {
   color: inherit;
 }
 
-/* line 86, ../../../app/stylesheets/_layout.sass */
+/* line 88, ../../../app/stylesheets/_layout.sass */
 a.button, input[type=submit], button {
   /* http://www.zurb.com/blog_uploads/0000/0617/buttons-03.html */
   -moz-border-radius: 5px;
@@ -141,7 +141,7 @@ a.button:hover, input[type=submit]:hover, button:hover {
 a.button:active, input[type=submit]:active, button:active {
   top: 1px;
 }
-/* line 88, ../../../app/stylesheets/_layout.sass */
+/* line 90, ../../../app/stylesheets/_layout.sass */
 a.button.loud, input[type=submit].loud, button.loud {
   background: #ff5c00 url('/images/alert-overlay.png?1296599919') repeat-x;
   font-size: 125%;
@@ -157,21 +157,21 @@ a.button:after {
   content: " >>";
 }
 
-/* line 94, ../../../app/stylesheets/_layout.sass */
+/* line 96, ../../../app/stylesheets/_layout.sass */
 ul.buttons {
   margin-bottom: 1em;
 }
-/* line 96, ../../../app/stylesheets/_layout.sass */
+/* line 98, ../../../app/stylesheets/_layout.sass */
 ul.buttons li {
   list-style: none;
   margin: 0 0.5em;
 }
-/* line 99, ../../../app/stylesheets/_layout.sass */
+/* line 101, ../../../app/stylesheets/_layout.sass */
 ul.buttons li, ul.buttons li form {
   display: inline;
 }
 
-/* line 102, ../../../app/stylesheets/_layout.sass */
+/* line 104, ../../../app/stylesheets/_layout.sass */
 #footer {
   clear: both;
   font-size: 75%;
@@ -179,77 +179,91 @@ ul.buttons li, ul.buttons li form {
   padding-top: 2em;
   text-align: center;
 }
-/* line 108, ../../../app/stylesheets/_layout.sass */
+/* line 110, ../../../app/stylesheets/_layout.sass */
 #footer ul, #footer div {
   display: inline;
   margin: 0 1em;
 }
-/* line 111, ../../../app/stylesheets/_layout.sass */
+/* line 113, ../../../app/stylesheets/_layout.sass */
 #footer li, #footer div ul {
   display: inline;
   margin: 0 0.5em;
 }
 
-/* line 115, ../../../app/stylesheets/_layout.sass */
+/* line 117, ../../../app/stylesheets/_layout.sass */
 .success, .alert, .warning {
   margin-bottom: 1em;
   padding: 0.25em 0.5em;
   text-align: center;
 }
 
-/* line 120, ../../../app/stylesheets/_layout.sass */
+/* line 122, ../../../app/stylesheets/_layout.sass */
 .success {
   background: #e6efc2;
   border: 1px solid #c6d880;
   color: #264409;
 }
 
-/* line 123, ../../../app/stylesheets/_layout.sass */
+/* line 125, ../../../app/stylesheets/_layout.sass */
 .alert {
   background: #fbe3e4;
   border: 1px solid #fbc2c4;
   color: #8a1f11;
 }
 
-/* line 126, ../../../app/stylesheets/_layout.sass */
+/* line 128, ../../../app/stylesheets/_layout.sass */
 .warning {
   background: #fff6bf;
   border: 1px solid #ffd324;
   color: #514721;
 }
 
-/* line 129, ../../../app/stylesheets/_layout.sass */
+/* line 131, ../../../app/stylesheets/_layout.sass */
 #userbar {
   font-family: Delicious, Helvetica, Arial, Verdana, sans-serif;
   position: absolute;
   right: 0;
   top: 0;
 }
-/* line 134, ../../../app/stylesheets/_layout.sass */
+/* line 136, ../../../app/stylesheets/_layout.sass */
 #userbar > * {
   display: inline;
   margin: 0 0.25em;
 }
 
-/* line 138, ../../../app/stylesheets/_layout.sass */
+/* line 140, ../../../app/stylesheets/_layout.sass */
+#userbar-image-mode {
+  font-weight: bold;
+  margin-right: 1em;
+  text-decoration: none;
+}
+/* line 144, ../../../app/stylesheets/_layout.sass */
+#userbar-image-mode img {
+  bottom: -2px;
+  height: 16px;
+  position: relative;
+  width: 16px;
+}
+
+/* line 147, ../../../app/stylesheets/_layout.sass */
 #userbar-log-in {
   text-decoration: none;
 }
-/* line 140, ../../../app/stylesheets/_layout.sass */
+/* line 149, ../../../app/stylesheets/_layout.sass */
 #userbar-log-in img {
   margin-bottom: -4px;
   margin-right: 0.25em;
 }
-/* line 144, ../../../app/stylesheets/_layout.sass */
+/* line 153, ../../../app/stylesheets/_layout.sass */
 #userbar-log-in span {
   text-decoration: underline;
 }
-/* line 146, ../../../app/stylesheets/_layout.sass */
+/* line 155, ../../../app/stylesheets/_layout.sass */
 #userbar-log-in:hover span {
   text-decoration: none;
 }
 
-/* line 149, ../../../app/stylesheets/_layout.sass */
+/* line 158, ../../../app/stylesheets/_layout.sass */
 .object {
   display: -moz-inline-box;
   -moz-box-orient: vertical;
@@ -263,25 +277,25 @@ ul.buttons li, ul.buttons li form {
   vertical-align: top;
   width: 100px;
 }
-/* line 156, ../../../app/stylesheets/_layout.sass */
+/* line 165, ../../../app/stylesheets/_layout.sass */
 .object a {
   text-decoration: none;
 }
-/* line 158, ../../../app/stylesheets/_layout.sass */
+/* line 167, ../../../app/stylesheets/_layout.sass */
 .object a img {
   -moz-opacity: 0.75;
   -webkit-opacity: 0.75;
   -o-opacity: 0.75;
   -khtml-opacity: 0.75;
 }
-/* line 160, ../../../app/stylesheets/_layout.sass */
+/* line 169, ../../../app/stylesheets/_layout.sass */
 .object a:hover img {
   -moz-opacity: 1;
   -webkit-opacity: 1;
   -o-opacity: 1;
   -khtml-opacity: 1;
 }
-/* line 162, ../../../app/stylesheets/_layout.sass */
+/* line 171, ../../../app/stylesheets/_layout.sass */
 .object img {
   display: block;
   height: 80px;
@@ -289,17 +303,17 @@ ul.buttons li, ul.buttons li form {
   width: 80px;
 }
 
-/* line 168, ../../../app/stylesheets/_layout.sass */
+/* line 177, ../../../app/stylesheets/_layout.sass */
 dt {
   font-weight: bold;
 }
 
-/* line 171, ../../../app/stylesheets/_layout.sass */
+/* line 180, ../../../app/stylesheets/_layout.sass */
 dd {
   margin: 0 0 1.5em 1em;
 }
 
-/* line 174, ../../../app/stylesheets/_layout.sass */
+/* line 183, ../../../app/stylesheets/_layout.sass */
 #home-link {
   font-family: Delicious, Helvetica, Arial, Verdana, sans-serif;
   font-size: 175%;
@@ -310,26 +324,26 @@ dd {
   position: absolute;
   top: 0;
 }
-/* line 184, ../../../app/stylesheets/_layout.sass */
+/* line 193, ../../../app/stylesheets/_layout.sass */
 #home-link:hover {
   background: #eeffee;
   text-decoration: none;
 }
-/* line 187, ../../../app/stylesheets/_layout.sass */
+/* line 196, ../../../app/stylesheets/_layout.sass */
 #home-link span:before {
   content: "<< ";
 }
 
-/* line 191, ../../../app/stylesheets/_layout.sass */
+/* line 200, ../../../app/stylesheets/_layout.sass */
 .pagination a, .pagination span {
   margin: 0 0.5em;
 }
-/* line 193, ../../../app/stylesheets/_layout.sass */
+/* line 202, ../../../app/stylesheets/_layout.sass */
 .pagination .current {
   font-weight: bold;
 }
 
-/* line 196, ../../../app/stylesheets/_layout.sass */
+/* line 205, ../../../app/stylesheets/_layout.sass */
 .object .nc-icon {
   height: 16px;
   position: absolute;
@@ -337,7 +351,7 @@ dd {
   top: 64px;
   width: 16px;
 }
-/* line 202, ../../../app/stylesheets/_layout.sass */
+/* line 211, ../../../app/stylesheets/_layout.sass */
 .object .nc-icon:hover {
   -moz-opacity: 0.5;
   -webkit-opacity: 0.5;
